这个commit的后面显示在哪，我看看

--- a/思维导图.md
+++ b/思维导图.md
@@ -3,3 +3,5 @@
 机器学习1课1周
 
 <img width="500" src="zhixi_picture1\meachine_learning\机器学习1课1周_24.1.19.png" alt="机器学习1课1周"/>
+
+<img width="500" src="zhixi_picture1\meachine_learning\机器学习1课2周_24.1.19.png" alt="机器学习1课1周"/>
